BUG FIX: entries were not positioned correctly when wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -105,6 +105,10 @@ a {
   background-color: white;
   width: 300px;
   height: 150px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 30px;
+  margin-right: 5px;
   box-shadow: 0 1px 14px rgba(0,0,0,.1);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
@@ -124,7 +128,7 @@ a {
 
 .cardList {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
   list-style: none;
   padding-top: 40px;
